[gd_scene load_steps=2 format=3 uid="uid://bgt57keji14g3"]

[ext_resource type="Script" path="res://stages/components/windows/SegReg_info_window.gd" id="1_jnxo7"]

[node name="SegReg_info_window" type="Window"]
initial_position = 2
size = Vector2i(350, 400)
visible = false
transient = true
popup_window = true
script = ExtResource("1_jnxo7")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainerField" type="VBoxContainer" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1

[node name="FieldTitle" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerField"]
layout_mode = 2
text = "Field"
horizontal_alignment = 1

[node name="PC" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerField"]
layout_mode = 2
text = "PC"
horizontal_alignment = 1

[node name="Instruction" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerField"]
visible = false
layout_mode = 2
text = "Instruction"
horizontal_alignment = 1

[node name="RsData" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerField"]
visible = false
layout_mode = 2
text = "RsData"
horizontal_alignment = 1

[node name="MemOut" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerField"]
visible = false
layout_mode = 2
text = "Mem Out"
horizontal_alignment = 1

[node name="ALUOut" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerField"]
visible = false
layout_mode = 2
text = "ALU Out"
horizontal_alignment = 1

[node name="RtData" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerField"]
visible = false
layout_mode = 2
text = "RtData"
horizontal_alignment = 1

[node name="ImmValue" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerField"]
visible = false
layout_mode = 2
text = "Immediate"
horizontal_alignment = 1

[node name="Rs" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerField"]
visible = false
layout_mode = 2
text = "Rs"
horizontal_alignment = 1

[node name="Rt" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerField"]
visible = false
layout_mode = 2
text = "Rt"
horizontal_alignment = 1

[node name="RegDest" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerField"]
layout_mode = 2
text = "RegDest"
horizontal_alignment = 1

[node name="VBoxContainerWrite" type="VBoxContainer" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1

[node name="WriteTitle" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerWrite"]
layout_mode = 2
text = "Write"
horizontal_alignment = 1

[node name="PC" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerWrite"]
layout_mode = 2
text = " "
horizontal_alignment = 1

[node name="Instruction" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerWrite"]
visible = false
layout_mode = 2
horizontal_alignment = 1

[node name="RsData" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerWrite"]
visible = false
layout_mode = 2
horizontal_alignment = 1

[node name="MemOut" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerWrite"]
visible = false
layout_mode = 2
horizontal_alignment = 1

[node name="ALUOut" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerWrite"]
visible = false
layout_mode = 2
horizontal_alignment = 1

[node name="RtData" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerWrite"]
visible = false
layout_mode = 2
horizontal_alignment = 1

[node name="ImmValue" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerWrite"]
visible = false
layout_mode = 2
horizontal_alignment = 1

[node name="Rs" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerWrite"]
visible = false
layout_mode = 2
horizontal_alignment = 1

[node name="Rt" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerWrite"]
visible = false
layout_mode = 2
horizontal_alignment = 1

[node name="RegDest" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerWrite"]
layout_mode = 2
horizontal_alignment = 1

[node name="VBoxContainerRead" type="VBoxContainer" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1

[node name="ReadTitle" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerRead"]
layout_mode = 2
text = "Read"
horizontal_alignment = 1

[node name="PC" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerRead"]
layout_mode = 2
text = " "
horizontal_alignment = 1

[node name="Instruction" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerRead"]
visible = false
layout_mode = 2
horizontal_alignment = 1

[node name="RsData" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerRead"]
visible = false
layout_mode = 2
horizontal_alignment = 1

[node name="MemOut" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerRead"]
visible = false
layout_mode = 2
horizontal_alignment = 1

[node name="ALUOut" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerRead"]
visible = false
layout_mode = 2
horizontal_alignment = 1

[node name="RtData" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerRead"]
visible = false
layout_mode = 2
horizontal_alignment = 1

[node name="ImmValue" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerRead"]
visible = false
layout_mode = 2
horizontal_alignment = 1

[node name="Rs" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerRead"]
visible = false
layout_mode = 2
horizontal_alignment = 1

[node name="Rt" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerRead"]
visible = false
layout_mode = 2
horizontal_alignment = 1

[node name="RegDest" type="Label" parent="ScrollContainer/HBoxContainer/VBoxContainerRead"]
layout_mode = 2
horizontal_alignment = 1

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
